section_17_open_policy_agent/alwaysdeny_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
  kind: ConstraintTemplate
  metadata:
  name: k8salwaysdeny
  spec:
  crd:
      spec:
      names:
          kind: K8sAlwaysDeny
      validation:
          # Schema for the `parameters` field
          openAPIV3Schema:
          properties:
              message:
              type: string
  targets:
      - target: admission.k8s.gatekeeper.sh
      rego: |
          package k8salwaysdeny
          violation[{"msg": msg}] {
          1 > 0
          msg := input.parameters.message
          }
